<resources>
    <string name="app_name">CalculatorApp</string>
    <string name="div_text">/</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="exp_text">^</string>
    <string name="mod_text">%</string>
    <string name="del_text">Del</string>
    <string name="clear_text">AC</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="mult_text">*</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="sub_btn">-</string>
    <string name="radix_text">.</string>
    <string name="_0">0</string>
    <string name="equal_text">=</string>
    <string name="plus_text">+</string>
    <string name="dark_mode">Dark Mode</string>
</resources>