<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/equation_et"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:textAlignment="textEnd"
        android:textColor="@color/primaryBlue700"
        android:background="@android:color/transparent"
        android:textSize="52sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/result_et"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:textAlignment="textEnd"
        android:textColor="@color/primaryBlue700"
        android:textSize="52sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/equation_et" />

    <Button
        android:id="@+id/ac_btn"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:backgroundTint="@color/primaryBlue700"
        android:textColor="@color/white"
        android:text="@string/clear_text"
        android:textStyle="bold"
        android:textSize="25sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/result_et"
        app:layout_constraintRight_toLeftOf="@id/del_btn"
        android:layout_marginLeft="5dp"/>

    <Button
        android:id="@+id/del_btn"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:backgroundTint="@color/primaryBlue700"
        android:textColor="@color/white"
        android:text="@string/del_text"
        android:textStyle="bold"
        android:textSize="25sp"
        app:layout_constraintLeft_toRightOf="@id/ac_btn"
        app:layout_constraintTop_toBottomOf="@id/result_et"
        app:layout_constraintRight_toLeftOf="@id/mod_btn"
        android:layout_marginLeft="5dp" />

    <Button
        android:id="@+id/mod_btn"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:backgroundTint="@color/primaryBlue700"
        android:textColor="@color/white"
        android:text="@string/mod_text"
        android:textStyle="bold"
        android:textSize="25sp"
        app:layout_constraintLeft_toRightOf="@id/del_btn"
        app:layout_constraintTop_toBottomOf="@id/result_et"
        app:layout_constraintRight_toLeftOf="@id/exp_btn"
        android:layout_marginLeft="5dp" />

    <Button
        android:id="@+id/exp_btn"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:backgroundTint="@color/primaryBlue700"
        android:textColor="@color/white"
        android:text="@string/exp_text"
        android:textStyle="bold"
        android:textSize="25sp"
        app:layout_constraintLeft_toRightOf="@id/mod_btn"
        app:layout_constraintTop_toBottomOf="@id/result_et"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"/>

    <Button
        android:id="@+id/button7"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:backgroundTint="@color/primaryBlue700"
        android:textColor="@color/white"
        android:text="@string/_7"
        android:textStyle="bold"
        android:textSize="25sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ac_btn"
        app:layout_constraintRight_toLeftOf="@id/button8"
        android:layout_marginLeft="5dp"/>

    <Button
        android:id="@+id/button8"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:backgroundTint="@color/primaryBlue700"
        android:textColor="@color/white"
        android:text="@string/_8"
        android:textStyle="bold"
        android:textSize="25sp"
        app:layout_constraintLeft_toRightOf="@id/button7"
        app:layout_constraintTop_toBottomOf="@id/del_btn"
        app:layout_constraintRight_toLeftOf="@id/button9"
        android:layout_marginLeft="5dp" />

    <Button
        android:id="@+id/button9"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:backgroundTint="@color/primaryBlue700"
        android:textColor="@color/white"
        android:text="@string/_9"
        android:textStyle="bold"
        android:textSize="25sp"
        app:layout_constraintLeft_toRightOf="@id/button8"
        app:layout_constraintTop_toBottomOf="@id/mod_btn"
        app:layout_constraintRight_toLeftOf="@id/div_btn"
        android:layout_marginLeft="5dp" />

    <Button
        android:id="@+id/div_btn"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:backgroundTint="@color/primaryBlue700"
        android:textColor="@color/white"
        android:text="@string/div_text"
        android:textStyle="bold"
        android:textSize="25sp"
        app:layout_constraintLeft_toRightOf="@id/button9"
        app:layout_constraintTop_toBottomOf="@id/exp_btn"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"/>

    <Button
        android:id="@+id/button4"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:backgroundTint="@color/primaryBlue700"
        android:textColor="@color/white"
        android:text="@string/_4"
        android:textStyle="bold"
        android:textSize="25sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button7"
        app:layout_constraintRight_toLeftOf="@id/button5"
        android:layout_marginLeft="5dp"/>

    <Button
        android:id="@+id/button5"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:backgroundTint="@color/primaryBlue700"
        android:textColor="@color/white"
        android:text="@string/_5"
        android:textStyle="bold"
        android:textSize="25sp"
        app:layout_constraintLeft_toRightOf="@id/button4"
        app:layout_constraintTop_toBottomOf="@id/button8"
        app:layout_constraintRight_toLeftOf="@id/button6"
        android:layout_marginLeft="5dp" />

    <Button
        android:id="@+id/button6"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:backgroundTint="@color/primaryBlue700"
        android:textColor="@color/white"
        android:text="@string/_6"
        android:textStyle="bold"
        android:textSize="25sp"
        app:layout_constraintLeft_toRightOf="@id/button5"
        app:layout_constraintTop_toBottomOf="@id/button9"
        app:layout_constraintRight_toLeftOf="@id/mult_btn"
        android:layout_marginLeft="5dp" />

    <Button
        android:id="@+id/mult_btn"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:backgroundTint="@color/primaryBlue700"
        android:textColor="@color/white"
        android:text="@string/mult_text"
        android:textStyle="bold"
        android:textSize="25sp"
        app:layout_constraintLeft_toRightOf="@id/button6"
        app:layout_constraintTop_toBottomOf="@id/div_btn"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"/>

    <Button
        android:id="@+id/button1"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:backgroundTint="@color/primaryBlue700"
        android:textColor="@color/white"
        android:text="@string/_1"
        android:textStyle="bold"
        android:textSize="25sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button4"
        app:layout_constraintRight_toLeftOf="@id/button2"
        android:layout_marginLeft="5dp"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:backgroundTint="@color/primaryBlue700"
        android:textColor="@color/white"
        android:text="@string/_2"
        android:textStyle="bold"
        android:textSize="25sp"
        app:layout_constraintLeft_toRightOf="@id/button1"
        app:layout_constraintTop_toBottomOf="@id/button5"
        app:layout_constraintRight_toLeftOf="@id/button3"
        android:layout_marginLeft="5dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:backgroundTint="@color/primaryBlue700"
        android:textColor="@color/white"
        android:text="@string/_3"
        android:textStyle="bold"
        android:textSize="25sp"
        app:layout_constraintLeft_toRightOf="@id/button2"
        app:layout_constraintTop_toBottomOf="@id/button6"
        app:layout_constraintRight_toLeftOf="@id/sub_btn"
        android:layout_marginLeft="5dp" />

    <Button
        android:id="@+id/sub_btn"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:backgroundTint="@color/primaryBlue700"
        android:textColor="@color/white"
        android:text="@string/sub_btn"
        android:textStyle="bold"
        android:textSize="25sp"
        app:layout_constraintLeft_toRightOf="@id/button3"
        app:layout_constraintTop_toBottomOf="@id/mult_btn"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"/>

    <Button
        android:id="@+id/radix_btn"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:backgroundTint="@color/primaryBlue700"
        android:textColor="@color/white"
        android:text="@string/radix_text"
        android:textStyle="bold"
        android:textSize="25sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button1"
        app:layout_constraintRight_toLeftOf="@id/button0"
        android:layout_marginLeft="5dp"/>

    <Button
        android:id="@+id/button0"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:backgroundTint="@color/primaryBlue700"
        android:textColor="@color/white"
        android:text="@string/_0"
        android:textStyle="bold"
        android:textSize="25sp"
        app:layout_constraintLeft_toRightOf="@id/radix_btn"
        app:layout_constraintTop_toBottomOf="@id/button2"
        app:layout_constraintRight_toLeftOf="@id/equal_btn"
        android:layout_marginLeft="5dp" />

    <Button
        android:id="@+id/equal_btn"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:backgroundTint="@color/primaryBlue500"
        android:textColor="@color/white"
        android:text="@string/equal_text"
        android:textStyle="bold"
        android:textSize="30sp"
        app:layout_constraintLeft_toRightOf="@id/button0"
        app:layout_constraintTop_toBottomOf="@id/button3"
        app:layout_constraintRight_toLeftOf="@id/plus_btn"
        android:layout_marginLeft="5dp" />

    <Button
        android:id="@+id/plus_btn"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:backgroundTint="@color/primaryBlue700"
        android:textColor="@color/white"
        android:text="@string/plus_text"
        android:textStyle="bold"
        android:textSize="25sp"
        app:layout_constraintLeft_toRightOf="@id/equal_btn"
        app:layout_constraintTop_toBottomOf="@id/sub_btn"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp" />


    


</androidx.constraintlayout.widget.ConstraintLayout>